Corrigindo algumas alterações anteriores

--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -3276,20 +3276,9 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "*10*. Há alguma correlação entre o valor do combustível (gasolina e etanol) e a região onde ele é vendido?"
-      ],
-      "metadata": {
-        "id": "YDQv3a6hoY1O"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "*10*. **Há alguma correlação entre o valor do combustível (gasolina e etanol) e a bandeira que vende ele?**"
+        "*9*. **Há alguma correlação entre o valor do combustível (gasolina e etanol) e a região onde ele é vendido?**"
       ],
       "metadata": {
         "id": "gh6VICZN2z2X"
@@ -3304,7 +3293,7 @@
       "metadata": {
         "id": "08xbrlvhoiEv"
       },
-      "execution_count": 35,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -4093,6 +4082,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*10*. Há alguma correlação entre o valor do combustível (gasolina e etanol) e a bandeira que vende ele?"
+      ],
+      "metadata": {
+        "id": "I9a3wYv-q_Kh"
+      }
     },
     {
       "cell_type": "code",
