--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -7,7 +7,8 @@
       "collapsed_sections": [
         "aRXkjGeVRmza",
         "9VofM7PSDWzf"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -21,7 +22,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/gustavovarella/Projeto_m4/blob/main/PROJETO_M4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -89,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "fK9pa_veoNcO"
       },
@@ -131,7 +133,7 @@
       "metadata": {
         "id": "d9-nkVsRpOdo"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -153,7 +155,7 @@
       "metadata": {
         "id": "6I1bFVAL4_7d"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -174,7 +176,7 @@
       "metadata": {
         "id": "-cEWuvdG7o2n"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +245,7 @@
           "height": 312
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,13 +402,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "JeBzUQzkCuX-",
         "outputId": "e7621343-a44e-4a7d-aaa2-c5b890fe75e1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -670,13 +671,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "mFuSN9QRCzD2",
         "outputId": "1d010477-6146-4fd9-9a08-8146720960ab"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,7 +981,7 @@
       "metadata": {
         "id": "WwLDWMlNlMUA"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1000,13 +1000,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BYxliDieFGtn",
         "outputId": "050a4d2e-3ec8-43b8-98a8-674e7272df1a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1043,7 +1042,7 @@
         "id": "jsAi3LvjDr_e",
         "outputId": "f3afbf8a-abf2-4a50-dd4d-02f0f9bf9ed8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1118,7 +1117,7 @@
         "id": "o_puROoTdpU4",
         "outputId": "587c4712-f108-4231-bfd2-38302cc4626a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1144,7 @@
         "id": "wZSNW2gUgrCQ",
         "outputId": "071f8a18-4841-4878-eb1c-083648ce0d02"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1172,7 +1171,7 @@
         "id": "-DItKQGQl4LE",
         "outputId": "55897d6f-be2e-4bef-9f61-645ac3b3e8b4"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1195,13 +1194,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "PzQ9M8wImDTl",
         "outputId": "83ba22e3-047c-420b-cf8e-256393eb5462"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1623,7 +1621,7 @@
         "id": "DkVI9B4L2DDs",
         "outputId": "64a6c94f-8b1a-434c-8888-a9e8ddc016d7"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,13 +1670,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vTInfzOeun_0",
         "outputId": "ead50d7e-4a1d-47d3-e36b-bc281e331310"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2020,7 +2017,7 @@
         "id": "7kV1EVJi0YvV",
         "outputId": "17aa597a-c1ff-4529-aef3-29e7cf127db3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2084,7 +2081,7 @@
         "id": "NNEWDOt604bI",
         "outputId": "608bc1ff-1923-41ee-8d15-d066654d0d8e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2408,6 +2405,102 @@
     {
       "cell_type": "markdown",
       "source": [
+        "1. Como se comportaram o preço dos combustíveis durante os dois meses citados? Os valores do etanol e da gasolina tiveram uma de queda ou diminuição?"
+      ],
+      "metadata": {
+        "id": "MZ_qTtJH4J8h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# alterando tipo da variável\n",
+        "df_completo['Valor de Venda'] = df_completo['Valor de Venda'].str.replace(',', '.')\n",
+        "df_completo['Valor de Venda']= df_completo['Valor de Venda'].astype(float)"
+      ],
+      "metadata": {
+        "id": "I9rz48Cn4Jep"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_comportamento = df_completo\n",
+        "df_comportamento.groupby(['Data da Coleta'])['Valor de Venda',].agg(['max','min']).plot(kind='bar', figsize=(30,10))"
+      ],
+      "metadata": {
+        "id": "lenSs_xX4UaR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.1 Os valores do etanol e da gasolina tiveram uma de queda ou diminuição?"
+      ],
+      "metadata": {
+        "id": "f1ZdcpS43475"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_comportamento.groupby(['Data da Coleta', 'Produto'])['Valor de Venda',].agg(['max','min'])"
+      ],
+      "metadata": {
+        "id": "hDQotIEt34i6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Qual o preço médio da gasolina e do etanol nesses dois meses?"
+      ],
+      "metadata": {
+        "id": "nmJUEo5m4m14"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_media = df_completo\n",
+        "df_media.groupby(['Produto'])['Valor de Venda'].agg(['median','mean'])"
+      ],
+      "metadata": {
+        "id": "LY98WB714l0p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "média da gasolina e do etanol nesses dois meses"
+      ],
+      "metadata": {
+        "id": "dqotE4z_4xNA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_combustivel = df_completo\n",
+        "df_combustivel.groupby(['Produto'])['Valor de Venda'].agg(['mean']).plot(kind='bar', figsize=(20,5))"
+      ],
+      "metadata": {
+        "id": "4m1Is5yA41qM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "*3*. **Quais os 5 estados com o preço médio da gasolina e do etanol mais caros?**"
       ],
       "metadata": {
@@ -2427,7 +2520,7 @@
         "id": "vKtJqeKz2-FR",
         "outputId": "77273398-db98-44e8-ba2a-8a6bfdfe9616"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2456,7 +2549,7 @@
         "id": "lx85ihWFNbdy",
         "outputId": "8e8e240b-f2de-4b76-a493-73cf86747f27"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2485,7 +2578,7 @@
         "id": "iTi_oZoFNbsh",
         "outputId": "c05f25d9-3c7a-4fef-9320-bd89418a4e45"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2525,7 +2618,7 @@
         "id": "SUGvnt9y2-qg",
         "outputId": "782b7b39-dde0-432b-d2e8-f681122db70e"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2590,7 +2683,7 @@
         "id": "jzYzFAN97cpL",
         "outputId": "50e4b8ee-bad9-454d-88da-9507cbb48692"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2779,7 +2872,7 @@
         "id": "i-vD7OkS7p9E",
         "outputId": "df10bd00-290d-4526-e76d-fa0931ffa4fb"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2946,7 +3039,7 @@
         "id": "oEQ00Fddl0xf",
         "outputId": "564006fe-a937-40f1-970b-a1dd2aa72302"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3032,7 +3125,7 @@
         "id": "SZvIdavGmit3",
         "outputId": "83258797-62c7-478e-8348-477bdeef8535"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3214,7 +3307,7 @@
         "id": "ImQ4k9w9nVd-",
         "outputId": "af1a67b1-fe84-41d9-deb7-5ab64aa22118"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3293,7 +3386,7 @@
       "metadata": {
         "id": "08xbrlvhoiEv"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3305,7 +3398,7 @@
       "metadata": {
         "id": "Z0OpeZfWonF5"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3317,7 +3410,7 @@
       "metadata": {
         "id": "aN7hyr5MosxH"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3335,7 +3428,7 @@
         "id": "S8molR61ozaf",
         "outputId": "ff825f13-7a40-45a0-9aa3-1ab0c0fa0aef"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3588,7 +3681,7 @@
       "metadata": {
         "id": "9UcrPaVHo5Me"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3600,7 +3693,7 @@
       "metadata": {
         "id": "uMcJY1FGo8e_"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3618,7 +3711,7 @@
         "id": "kNoIwz6gpEmu",
         "outputId": "7a1e11dc-ca5d-4fad-cd12-b7d62b8dd1a9"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3890,7 +3983,7 @@
         "id": "rMi_5evtpLBm",
         "outputId": "078bcc21-3be7-4f5a-f1ee-9740c13bacdd"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4060,7 +4153,7 @@
         "id": "pnhEav_SpCDG",
         "outputId": "173ded31-0de3-4920-a69d-244bf420f753"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4115,7 +4208,7 @@
         "id": "JgjYXm7p29W0",
         "outputId": "dbc2d35c-54d5-4664-f192-6531ccd1d747"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4474,7 +4567,7 @@
         "id": "csP0KRN2Smnw",
         "outputId": "0e91fffa-3030-4345-e03f-75d4d85b9c3c"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4627,7 +4720,7 @@
         "id": "jgUXg4zAe8bW",
         "outputId": "657114e8-a3dc-4b30-c36b-c8f98b080e3c"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4791,7 +4884,7 @@
         "id": "HkmTkjJEfLfX",
         "outputId": "4bea0718-837f-4734-84b1-83c371de42c7"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5105,7 +5198,7 @@
         "id": "zWVT_sFYhqH0",
         "outputId": "0fd4abe9-d8d0-459c-9999-d9b5675ea9ec"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
