Correção Número das Questões

--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "fK9pa_veoNcO"
       },
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "d9-nkVsRpOdo"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "6I1bFVAL4_7d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "-cEWuvdG7o2n"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
           "height": 312
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -332,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,13 +402,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "JeBzUQzkCuX-",
         "outputId": "db75a9da-2b13-4110-d72e-bfa2973a8fce"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,13 +671,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "mFuSN9QRCzD2",
         "outputId": "43536778-5cd5-46d9-a264-405103d37d2b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,7 +989,7 @@
           "height": 624
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1311,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1375,7 @@
           "height": 624
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1702,7 @@
       "metadata": {
         "id": "mu702Zkx2WI_"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1735,7 +1733,7 @@
       "metadata": {
         "id": "yQo2uFgL2fd8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1763,7 +1761,7 @@
         "id": "BYxliDieFGtn",
         "outputId": "1354115d-0b9d-46c3-f913-2ee5a84c996c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1792,7 +1790,7 @@
           "height": 374
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1830,7 +1828,7 @@
         "id": "jsAi3LvjDr_e",
         "outputId": "e31943c3-d6e1-42dd-f9db-ae5c02d66cac"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1905,7 +1903,7 @@
         "id": "o_puROoTdpU4",
         "outputId": "6eb0f0e6-030a-44f5-ac91-5936083cc24c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1932,7 +1930,7 @@
         "id": "wZSNW2gUgrCQ",
         "outputId": "ced472a2-32d3-4329-cd52-411464eafb4e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1959,7 +1957,7 @@
         "id": "-DItKQGQl4LE",
         "outputId": "cbcb22ca-d807-428f-8a56-4f6bfcb3bc64"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1988,7 +1986,7 @@
         "id": "PzQ9M8wImDTl",
         "outputId": "14afab14-32a6-4a51-d217-f05c46936c85"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2300,7 +2298,7 @@
         "id": "DkVI9B4L2DDs",
         "outputId": "26f4b8c4-5cd7-4f99-dcf6-2542f72bf0b7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2336,7 +2334,7 @@
           "height": 300
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2564,7 +2562,7 @@
           "height": 499
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2615,7 +2613,7 @@
           "height": 486
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2851,7 +2849,7 @@
           "height": 175
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3010,7 +3008,7 @@
           "height": 449
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3067,7 +3065,7 @@
         "id": "vKtJqeKz2-FR",
         "outputId": "73fe917d-8145-4f68-e611-e794a358c7a6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3096,7 +3094,7 @@
         "id": "lx85ihWFNbdy",
         "outputId": "6918a3a3-7cbe-40c8-9186-33fc7163fac5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3125,7 +3123,7 @@
         "id": "iTi_oZoFNbsh",
         "outputId": "ac136624-3a11-427f-b28c-d795c272ff01"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3165,7 +3163,7 @@
         "id": "SUGvnt9y2-qg",
         "outputId": "75d9cd59-de37-4190-96ae-1a2e4a2c5021"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3230,7 +3228,7 @@
         "id": "jzYzFAN97cpL",
         "outputId": "fd59ba53-50c3-497f-879a-6c6a2df97732"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3419,7 +3417,7 @@
         "id": "i-vD7OkS7p9E",
         "outputId": "ec67c433-f9f9-493a-e9e8-b49c7e5c6057"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3586,7 +3584,7 @@
         },
         "outputId": "cc75372e-c060-4b7b-d842-28fa705038dc"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3650,7 +3648,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*9*. **Qual a região que possui o menor valor médio do etanol?**"
+        "*8*. **Qual a região que possui o menor valor médio do etanol?**"
       ],
       "metadata": {
         "id": "ylmc9FWRmdce"
@@ -3672,7 +3670,7 @@
         },
         "outputId": "2d7b0bc0-640d-4ac0-94d4-2220612c7ea4"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3834,7 +3832,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*9.1*.  **Média dos valores da Gasolina Aditivada por estado:**"
+        "*8.1*  **Média dos valores da Gasolina Aditivada por estado:**"
       ],
       "metadata": {
         "id": "jj5Xzk9WnjIe"
@@ -3854,7 +3852,7 @@
         "id": "ImQ4k9w9nVd-",
         "outputId": "2eab337c-6a66-473e-a942-02a3003b8c85"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3940,7 +3938,7 @@
         "id": "CRLdMzyWKZOz",
         "outputId": "2eb2addf-8487-4748-b4b4-c78e3dab1b06"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4139,7 +4137,7 @@
       "metadata": {
         "id": "ov5UV51SLpZr"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4157,7 +4155,7 @@
         "id": "Ioz8ii58LE6L",
         "outputId": "0280c37f-02ef-4074-de3a-e46bde083312"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4361,7 +4359,7 @@
         "id": "TfF59l_oLQ2y",
         "outputId": "33f06fd9-a938-4e1f-aab3-68249e10df6c"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4510,7 +4508,7 @@
         "id": "pnhEav_SpCDG",
         "outputId": "b1006844-69d3-4529-9ff3-f6d071a561a8"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4579,7 +4577,7 @@
         },
         "outputId": "d424bb3c-af55-4919-acc2-f004d68aeaf2"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
