Correção de Português

--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "fK9pa_veoNcO"
       },
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "d9-nkVsRpOdo"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "6I1bFVAL4_7d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "-cEWuvdG7o2n"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
           "height": 312
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -332,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,13 +402,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "JeBzUQzkCuX-",
         "outputId": "820ddc90-0ae2-4ad9-aa9b-9d7ee30d0f78"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,13 +671,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "mFuSN9QRCzD2",
         "outputId": "113d840f-f903-4b33-bfd5-80972d412917"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -991,7 +989,7 @@
           "height": 424
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1313,7 +1311,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1375,7 @@
           "height": 424
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1702,7 @@
       "metadata": {
         "id": "mu702Zkx2WI_"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1735,7 +1733,7 @@
       "metadata": {
         "id": "yQo2uFgL2fd8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1763,7 +1761,7 @@
         "id": "BYxliDieFGtn",
         "outputId": "a23909ae-319d-49e3-a76f-3269097ca878"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1792,7 +1790,7 @@
           "height": 374
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1830,7 +1828,7 @@
         "id": "jsAi3LvjDr_e",
         "outputId": "80abe9df-d451-44d6-9271-93638e318d59"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1905,7 +1903,7 @@
         "id": "o_puROoTdpU4",
         "outputId": "41498c0b-35da-4c17-aada-5831b8e18bf1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1932,7 +1930,7 @@
         "id": "wZSNW2gUgrCQ",
         "outputId": "06d320af-a2c0-409d-9105-d02bebeb8e4b"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1959,7 +1957,7 @@
         "id": "-DItKQGQl4LE",
         "outputId": "c89ff346-bd51-4f05-d8cf-92613a6b1432"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1988,7 +1986,7 @@
         "id": "PzQ9M8wImDTl",
         "outputId": "fb5327d1-6deb-45d9-de73-cbe041397c8c"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2300,7 +2298,7 @@
         "id": "DkVI9B4L2DDs",
         "outputId": "e147d278-5241-4f35-b370-6df896680e1d"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2336,7 +2334,7 @@
           "height": 301
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2564,7 +2562,7 @@
           "height": 627
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2615,7 +2613,7 @@
           "height": 487
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2851,7 +2849,7 @@
           "height": 175
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3010,7 +3008,7 @@
           "height": 449
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3067,7 +3065,7 @@
         "id": "vKtJqeKz2-FR",
         "outputId": "b499c6ec-410a-4c38-dbe4-5b3745f145c1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3096,7 +3094,7 @@
         "id": "lx85ihWFNbdy",
         "outputId": "5d70eb87-b923-4b92-8b6c-a3c67ef77a78"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3125,7 +3123,7 @@
         "id": "iTi_oZoFNbsh",
         "outputId": "bf52a99f-afef-4771-e624-3d76579ee00c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3165,7 +3163,7 @@
         "id": "SUGvnt9y2-qg",
         "outputId": "bfb4212c-36b3-49f9-dc40-a17dc81f50b5"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3230,7 +3228,7 @@
         "id": "jzYzFAN97cpL",
         "outputId": "28feb299-b528-4336-9c5a-b8ab9c288d3f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3419,7 +3417,7 @@
         "id": "i-vD7OkS7p9E",
         "outputId": "16edffec-6639-411b-e87c-6d62fd54f666"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3586,7 +3584,7 @@
         },
         "outputId": "a8472d5f-3cf4-48c5-e117-01d0e21fc4c9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3672,7 +3670,7 @@
         },
         "outputId": "44b77658-d219-4dc9-aa6a-4f88734dca7b"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3854,7 +3852,7 @@
         "id": "ImQ4k9w9nVd-",
         "outputId": "244fd13a-8367-4b3d-8d48-778bff741fcf"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3940,7 +3938,7 @@
         "id": "CRLdMzyWKZOz",
         "outputId": "cfc6ecdf-b991-458a-ee42-4b2491955ee5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4139,7 +4137,7 @@
       "metadata": {
         "id": "ov5UV51SLpZr"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4157,7 +4155,7 @@
         "id": "Ioz8ii58LE6L",
         "outputId": "351cba84-9bfd-4b74-8e7a-dfc2dca2b3db"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4361,7 +4359,7 @@
         "id": "TfF59l_oLQ2y",
         "outputId": "723104bb-00dd-429e-9cb9-08fd9e0b27fa"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4510,7 +4508,7 @@
         "id": "pnhEav_SpCDG",
         "outputId": "72769298-f81b-4db7-84bd-7f8812287fc8"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4579,7 +4577,7 @@
         },
         "outputId": "ef5e1e99-14df-4f30-c89c-e4570178d69b"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4614,7 +4612,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*Extra n°1*. **No ultimo mês, qual foi o combustível mais caro e o mais barato ?**"
+        "*Extra n°1*. **No último mês, qual foi o combustível mais caro e o mais barato ?**"
       ],
       "metadata": {
         "id": "zb1xejb6fCZ9"
@@ -4635,7 +4633,7 @@
           "height": 424
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4949,7 +4947,7 @@
           "height": 432
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4968,7 +4966,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*Extra n°2*. **Qual o valor maximo e minimo dos combustíveis no período ?**"
+        "*Extra n°2*. **Qual o valor máximo e mínimo dos combustíveis no período ?**"
       ],
       "metadata": {
         "id": "sOt9YiqzJZ9c"
@@ -4988,7 +4986,7 @@
           "height": 175
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5147,7 +5145,7 @@
           "height": 432
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
