corrigindo comentário da questão 10

--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -4268,7 +4268,7 @@
           "height": 424
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4467,7 +4467,7 @@
       "metadata": {
         "id": "Teqw6aQTcAMh"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4485,7 +4485,7 @@
           "height": 424
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4689,7 +4689,7 @@
           "height": 112
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4838,7 +4838,7 @@
           "height": 342
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4860,6 +4860,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Após a visualização do heatmap acima pode-se concluir que a correlação entre o valor do combustível e a Bandeira onde ele é vendido é uma correlação fraca assim como pudemos ver anteriormente com a Região"
+      ],
+      "metadata": {
+        "id": "HZbI18gOdEkH"
+      }
     },
     {
       "cell_type": "markdown",
