--- a/PROJETO_M4.ipynb
+++ b/PROJETO_M4.ipynb
@@ -4871,6 +4871,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "bandeiras = df_completo[(df_completo['Bandeira'] == 'RAIZEN')|\\\n",
+        "                        (df_completo['Bandeira'] == 'PETROBRAS DISTRIBUIDORA S.A.')|\\\n",
+        "                        (df_completo['Bandeira'] == 'IPIRANGA')|\\\n",
+        "                        (df_completo['Bandeira'] == 'ALESAT')].groupby(['Regiao','Bandeira'])\n",
+        "bandeiras = bandeiras['Valor_de_Venda'].describe()\n",
+        "bandeiras.reset_index(inplace=True)\n",
+        "media_nacional = df_completo['Valor_de_Venda'].mean()\n",
+        "bandeiras['mean'] = bandeiras['mean']- media_nacional #fazendo diferença da média nacioal pela média de acordo com a bandeira e região\n",
+        "plt.figure(figsize=(10,5)) #determinando o tamanho da figura\n",
+        "current_palette_7 = sns.color_palette(\"hls\",4) #usado para colorir o gráfico\n",
+        "ax =sns.barplot(x='Regiao',y='mean',hue='Bandeira',data=bandeiras) # desenhar o grafico\n",
+        "plt.legend(loc='best',prop={'size':15}) #legenda\n",
+        "ax.set_ylabel ( 'Diferença para a media nacional em centavos',fontsize = 13) \n",
+        "ax.set_xlabel( xlabel='Regiões',fontsize = 20)\n",
+        "plt.xticks(fontsize=15)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "5sMVuPlYimM-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "com o gráfico acima podemos ver a diferença da média do valor de venda nacional (todas regiões) pela média por região, agrupando por bandeira, conseguimos ver que a bandeira influencia no valor final do produto. As diferenças negativas indicam que a média nacional é maior que a média da região."
+      ],
+      "metadata": {
+        "id": "jPV4xmG5ipEV"
+      }
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "*Extra n°1*. **No ultimo mês, qual foi o combustível mais caro e o mais barato ?**"
